fixing alignment issue

--- a/css/theme/source/pivotal.scss
+++ b/css/theme/source/pivotal.scss
@@ -159,6 +159,10 @@ section.textleft-imageright img {
   width: 50%;
 }
 
+section.textleft-imageright ol {
+  display: list-item;
+}
+
 /**
 three-horizontal-images
 **/
